PLATFORM-2466 - Set AVX2 to OFF by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ cmake_minimum_required(VERSION 2.8)
 option(FACE_DETECTION_INSTALL "Install face detection library" OFF)
 option(ENABLE_NEON "whether use neon, if use arm please set it on" OFF)
 option(ENABLE_AVX512 "use avx512" OFF)
-option(ENABLE_AVX2 "use avx2" ON)
+option(ENABLE_AVX2 "use avx2" OFF)
 option(DEMO "build the demo" OFF)
 option(USE_OPENMP "Use OpenMP" ON)
 
